changes to set up.

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -67,6 +67,34 @@
 #ext_menu-31 .mbr-navbar__hamburger {
   color: #ffffff;
 }
+#msg-box3-47 .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #c1c1c1;
+}
+#msg-box3-47 .mbr-header .mbr-header__subtext {
+  text-align: center;
+}
+#msg-box3-50 .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #c1c1c1;
+}
+#msg-box3-50 .mbr-header .mbr-header__subtext {
+  text-align: center;
+}
+#msg-box3-36 .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #c1c1c1;
+}
+#msg-box3-36 .mbr-header .mbr-header__subtext {
+  text-align: center;
+}
+#msg-box3-40 .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #c1c1c1;
+}
+#msg-box3-40 .mbr-header .mbr-header__subtext {
+  text-align: center;
+}
 #ext_menu-31 .mbr-brand__name {
   font-size: 16px;
 }
@@ -76,6 +104,31 @@
 #ext_menu-31 .mbr-navbar__hamburger {
   color: #ffffff;
 }
-#gallery1-22 SMALL {
-  color: #ffffff;
+#msg-box3-34 .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #c1c1c1;
+}
+#msg-box3-34 .mbr-header .mbr-header__subtext {
+  text-align: center;
+}
+#msg-box3-35 .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #c1c1c1;
+}
+#msg-box3-35 .mbr-header .mbr-header__subtext {
+  text-align: center;
+}
+#msg-box3-37 .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #c1c1c1;
+}
+#msg-box3-37 .mbr-header .mbr-header__subtext {
+  text-align: center;
+}
+#msg-box3-39 .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #c1c1c1;
+}
+#msg-box3-39 .mbr-header .mbr-header__subtext {
+  text-align: center;
 }
